--- a/src/pages/home/sections/manufacturer/manufacturer.scss
+++ b/src/pages/home/sections/manufacturer/manufacturer.scss
@@ -73,6 +73,7 @@
 }
 
 .manufacturer-slider {
+  height: 100%;
   &__prev,
   &__next {
     position: absolute;
